<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_dialog_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialog_default_content_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dialog_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_message"
        app:srcCompat="@drawable/ic_dialog_winner" />

    <ImageView
        android:id="@+id/iv_player_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/dialog_default_content_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dialog_message"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
        app:srcCompat="@drawable/ic_player_1" />

    <TextView
        android:id="@+id/tv_dialog_message"
        style="@style/dialog_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_winner"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/dialog_result"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/dialog_title_winner"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <GridLayout
        android:id="@+id/main_grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_grid"
        android:elevation="2dp"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/cell_0_0"
            style="@style/cell"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_0_1"
            style="@style/cell"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_0_2"
            style="@style/cell"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_1_0"
            style="@style/cell"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_1_1"
            style="@style/cell"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_1_2"
            style="@style/cell"
            android:layout_row="1"
            android:layout_column="2"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_2_0"
            style="@style/cell"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_2_1"
            style="@style/cell"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />

        <ImageButton
            android:id="@+id/cell_2_2"
            style="@style/cell"
            android:layout_row="2"
            android:layout_column="2"
            android:contentDescription="@string/default_content_description"
            android:onClick="move"
            app:srcCompat="@drawable/background_default_cell" />
    </GridLayout>

    <TextView
        android:id="@+id/tv_player_1"
        style="@style/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_1"
        app:layout_constraintStart_toStartOf="@+id/main_grid_layout"
        app:layout_constraintTop_toBottomOf="@+id/iv_player_1" />

    <TextView
        android:id="@+id/tv_player_2"
        style="@style/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_2"
        app:layout_constraintEnd_toEndOf="@+id/main_grid_layout"
        app:layout_constraintTop_toBottomOf="@+id/iv_player_2" />

    <ImageView
        android:id="@+id/iv_player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dialog_avatar_content_description"
        android:src="@drawable/ic_player_1"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_1"
        app:layout_constraintStart_toStartOf="@+id/tv_player_1"
        app:layout_constraintTop_toBottomOf="@+id/main_grid_layout" />

    <ImageView
        android:id="@+id/iv_player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dialog_avatar_content_description"
        android:src="@drawable/ic_player_2"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_2"
        app:layout_constraintStart_toStartOf="@+id/tv_player_2"
        app:layout_constraintTop_toBottomOf="@+id/main_grid_layout" />

    <ImageButton
        android:id="@+id/bt_restart_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="onRestartGame"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="@+id/main_grid_layout"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

</androidx.constraintlayout.widget.ConstraintLayout>